Style header. Start hero section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-		<link rel="stylesheet" href="https://cdn.jsdeliver.net/npm/remixicon@3.5.0/fonts/remixicon.css">
+		<link
+			href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
+			rel="stylesheet"
+		/>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +19,10 @@
 	</head>
 	<body>
 		<script type="text/javascript" src="script.js"></script>
+
+		<!--Header-->
 		<header>
-			<a href="#" class="logo">Ethan <span> Major. </span></a>
+			<a href="#" class="logo">Ethan Major <span>. </span></a>
 
 			<div class="bx bx-menu" id="menu-icon"></div>
 			<ul class="navlist">
@@ -31,5 +36,17 @@
 				<a href="#" class="h-btn">Contact Me</a>
 			</div>
 		</header>
+
+		<!--Hero Section-->
+		<section class="hero" id="home">
+			<div class="main-content">
+				<h4>Hi, There!</h4>
+				<h1>I'm <span>Ethan Major</span></h1>
+			</div>
+			<div class="social">
+				<a href="#"><i class="ri-github-fill"></i></a>
+				<a href="#"><i class="ri-linkedin-box-fill"></i></a>
+			</div>
+		</section>
 	</body>
 </html>
