Styled hero section

--- a/index.html
+++ b/index.html
@@ -21,31 +21,43 @@
 		<script type="text/javascript" src="script.js"></script>
 
 		<!--Header-->
-		<header>
-			<a href="#" class="logo">Ethan Major <span>. </span></a>
-
-			<div class="bx bx-menu" id="menu-icon"></div>
-			<ul class="navlist">
-				<li><a href="#home">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-			<div class="top-btnn">
-				<a href="#" class="h-btn">Contact Me</a>
-			</div>
-		</header>
-
+		<section class="header" id="header">
+			<header>
+				<a href="#" class="logo">Ethan Major <span>. </span></a>
+	
+				<div class="bx bx-menu" id="menu-icon"></div>
+				<ul class="navlist">
+					<li><a href="#home">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+				<div class="top-btnn">
+					<a href="#contact" class="h-btn">Contact Me</a>
+				</div>
+			</header>
+		</section>
+		
 		<!--Hero Section-->
 		<section class="hero" id="home">
 			<div class="main-content">
-				<h4>Hi, There!</h4>
+				<h4>Welcome.</h4>
 				<h1>I'm <span>Ethan Major</span></h1>
-			</div>
-			<div class="social">
-				<a href="#"><i class="ri-github-fill"></i></a>
-				<a href="#"><i class="ri-linkedin-box-fill"></i></a>
+				<p>
+					I'm a full-stack developer based in Waterloo, Ontario.
+					With a passion for turning innovative ideas into a reality, 
+					I thrive on creating sophisticated solutions in the ever-evolving landscape of software development. 
+					Beyond professional software development, I'm a hobbyist game developer primarily leveraging the Godot and Unity game engines. 
+					Outside of the tech space, you'll find me immersing myself in video games, exploring new places through travel, and scaling new heights through rock climbing. 
+				</p>
+				<div class="social">
+					<a href="https://github.com/EthanMajor9" target="_blank"><i class="ri-github-fill"></i></a>
+					<a href="https://www.linkedin.com/in/ethan-major/" target="_blank"><i class="ri-linkedin-box-fill"></i></a>
+				</div>
+				<div class="main-btn">
+					<a href="#" class="btn">Hire Me!</a>
+					<a href="/files/EthanMajorCV.pdf" class="btn btn2" download>Download CV</a>
+				</div>
 			</div>
 		</section>
 	</body>
