Organized file structure

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
 		<title>Ethan Major | Portfolio</title>
 
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="../src/style.css">
 		<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 		<link
 			href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap">
 	</head>
 	<body>
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="../src/script.js"></script>
 
 		<!--Header-->
 		<section class="header" id="header">
